Accepted all changes to SA sutras

--- a/01_agama/samyukta/01/SA1_1-4.md
+++ b/01_agama/samyukta/01/SA1_1-4.md
@@ -31,7 +31,7 @@ next: SA1_1.html
 ### Notes
 
 1. {:#n1} Close parallels to this sūtra are [SN 22.12](https://suttacentral.net/sn22.12){:target="_blank"} and [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}. The next three sūtras (SĀ 1.2-4) are variants that follow this template while substituting three other attributes (“painful,” “empty,” and “not self”) for “impermanent.” Compare this sūtra with [SĀ 2.1-4 (188)](../02/SA2_1.html){:target="_blank"}, which applies an identical template to the six senses. The Chinese translator there employs clearer grammatical structures and vocabulary choices (e.g., 觀察 to clarify that 觀 means “observe” instead of “contemplate,” 正見 instead of 正觀, and dependent clauses instead of nominalized subjects). [\[back\]](#ref1)
-2. {:#n2} *right view*. Yinshun amends “correct observation” (正觀) to “right view” (正見) in this sūtra citing the parallel passages at [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"} and [SĀ 2.1](../02/SA2_1.html){:target="_blank"}. I’ve followed his suggestion here and below. [\[back\]](#ref2)
+2. {:#n2} <em>right view</em>. Yinshun amends “correct observation” (正觀) to “right view” (正見) in this sūtra citing the parallel passages at [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"} and [SĀ 2.1](../02/SA2_1.html){:target="_blank"}. I’ve followed his suggestion here and below. [\[back\]](#ref2)
 
 ---
 
