--- a/01_agama/samyukta/01/SA1_147.md
+++ b/01_agama/samyukta/01/SA1_147.md
@@ -22,7 +22,7 @@ next: SA1_148.html
 
 The monks said to the Buddha, “No, Bhagavān.”
 
-4\. The Buddha told the monks, “Good, good! Form is impermanent and liable to change. Tiring and parting with desire for it, it ceases, becomes tranquil, and disappears. Thus, since the distant past, all forms have been impermanent, painful, and liable to change. Known in this way, the conditioning of those forms produces the contaminants, which are harmful, burning, and grievous. Destroy them all. Once they are destroyed, there’s no attachment. Once there’s no attachment, one will live in well-being. Once they live in well-being, they’ll attain parinirvāṇa. *Feeling, conception, volition, and consciousness are likewise.*”
+4\. The Buddha told the monks, “Good, good! Form is impermanent and liable to change. Tiring and parting with desire for it, it ceases, becomes tranquil, and disappears. Thus, since the distant past, all forms have been impermanent, painful, and liable to change. Known in this way, the conditioning of those forms produces the contaminants, which are harmful, burning, and grievous. Destroy them all. Once they are destroyed, there’s no attachment. Once there’s no attachment, one will live in well-being. Once they live in well-being, they’ll attain parinirvāṇa. <em>Feeling, conception, volition, and consciousness are likewise.</em>”
 {:#p4}
 
 5\. When the Buddha spoke this sūtra, those three upright men didn’t produce the contaminants, and their minds were liberated.
@@ -35,7 +35,7 @@ The monks said to the Buddha, “No, Bhagavān.”
 
 ### Notes
 
-1. {:#n1}*fully abides in realization.* Ch. 作證具足住. In SĀ 1.61, 1.154 et al, this is a synonym for liberation from rebirth. The expression “to fully abide” is also used for attaining each of the four dhyānas in SĀ 4.10, 6.5, et al. [\[back\]](#ref1)
+1. {:#n1}<em>fully abides in realization.</em> Ch. 作證具足住. In SĀ 1.61, 1.154 et al, this is a synonym for liberation from rebirth. The expression “to fully abide” is also used for attaining each of the four dhyānas in SĀ 4.10, 6.5, et al. [\[back\]](#ref1)
 
 ---
 
