--- a/01_agama/samyukta/01/SA1_148.md
+++ b/01_agama/samyukta/01/SA1_148.md
@@ -22,12 +22,12 @@ next: SA1_149.html
 
 The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma support! Please explain this! After listening, the monks will approve of what’s said.”
 
-4\. The Buddha told the monks, “Listen closely, and consider it well. I will explain it for you. Monks, those things have form, cause form, and they’re tied to form when someone examines for themselves the arising of grief, sorrow, pain, and trouble that have yet to arise and the growth [of grief, sorrow, pain, and trouble] that have already arisen. *Feeling, conception, volition, and consciousness are likewise.* Monks, could it be that form is permanent, eternal, unchanging, and a correct abode?”
+4\. The Buddha told the monks, “Listen closely, and consider it well. I will explain it for you. Monks, those things have form, cause form, and they’re tied to form when someone examines for themselves the arising of grief, sorrow, pain, and trouble that have yet to arise and the growth [of grief, sorrow, pain, and trouble] that have already arisen. <em>Feeling, conception, volition, and consciousness are likewise.</em> Monks, could it be that form is permanent, eternal, unchanging, and a correct abode?”
 {:#p4}
 
 They replied, “No, Bhagavān.”
 
-5\. The Buddha told the monks, “Good, monks! Good! Form is impermanent. Suppose good sons know that form is impermanent, painful, and changing. Parting with desire for it, it ceases, becomes tranquil, and disappears. After knowing that all forms have been impermanent, painful, and liable to change since the distant past, those good sons will stop form when it’s the cause and condition giving rise to grief, sorrow, pain, and trouble. Having stopped it, they’ll attach to nothing. Being detached, they’ll live in well-being. Once they live in well-being, that’s called nirvāṇa. *Feelings, conceptions, volitions, and consciousness are likewise.*”
+5\. The Buddha told the monks, “Good, monks! Good! Form is impermanent. Suppose good sons know that form is impermanent, painful, and changing. Parting with desire for it, it ceases, becomes tranquil, and disappears. After knowing that all forms have been impermanent, painful, and liable to change since the distant past, those good sons will stop form when it’s the cause and condition giving rise to grief, sorrow, pain, and trouble. Having stopped it, they’ll attach to nothing. Being detached, they’ll live in well-being. Once they live in well-being, that’s called nirvāṇa. <em>Feelings, conceptions, volitions, and consciousness are likewise.</em>”
 {:#p5}
 
 6\. When the Buddha spoke this sūtra, the contaminants didn’t arise in sixteen monks, and their minds were liberated.
