--- a/01_agama/samyukta/01/SA1_153.md
+++ b/01_agama/samyukta/01/SA1_153.md
@@ -102,10 +102,10 @@ next: SA1_158.html
 27\. “How is consciousness’s escape truly known? When desire for consciousness is controlled, stopped, and transcended, this is called consciousness’s escape. Consciousness’s escape is thus truly known.
 {:#p27}
 
-28\. “Monks, if an ascetic or priest knows and sees form in this way and knows and sees the way to part with desire for it in this way, this is called the correct heading. If someone is correctly headed, I say that they have entered. *Feeling, conception, volition, and consciousness are likewise.*
+28\. “Monks, if an ascetic or priest knows and sees form in this way and knows and sees the way to part with desire for it in this way, this is called the correct heading. If someone is correctly headed, I say that they have entered. <em>Feeling, conception, volition, and consciousness are likewise.</em>
 {:#p28}
 
-29\. “If an ascetic or priest truly knows and sees form, then disillusionment with form arises. Parting with desire for it, they don’t produce contaminants, and the mind becomes liberated. If someone’s mind becomes liberated, then it’s consistent. It being consistent, the religious life is established. Someone established in the religious life is free of another’s control. This is called the end of suffering. *Feeling, conception, volition, and consciousness is likewise.*”
+29\. “If an ascetic or priest truly knows and sees form, then disillusionment with form arises. Parting with desire for it, they don’t produce contaminants, and the mind becomes liberated. If someone’s mind becomes liberated, then it’s consistent. It being consistent, the religious life is established. Someone established in the religious life is free of another’s control. This is called the end of suffering. <em>Feeling, conception, volition, and consciousness is likewise.</em>”
 {:#p29}
 
 30\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
