--- a/01_agama/samyukta/01/SA1_158.md
+++ b/01_agama/samyukta/01/SA1_158.md
@@ -61,7 +61,7 @@ next: SA1_159.html
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.79](https://suttacentral.net/sn22.79){:target="_blank"}. Note that there are some significant departures between the two versions. [\[back\]](#ref1)
-2. {:#n2} *distinguishing*. The Chinese here could be a literal translation of *vi-* (別) *-jñā-* (知). [\[back\]](#ref2)
+2. {:#n2} <em>distinguishing</em>. The Chinese here could be a literal translation of <em>vi-</em> (別) <em>-jñā-</em> (知). [\[back\]](#ref2)
 
 ---
 
