--- a/01_agama/samyukta/01/SA1_20.md
+++ b/01_agama/samyukta/01/SA1_20.md
@@ -43,7 +43,7 @@ next: SA1_21.html
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.27](https://suttacentral.net/sn22.27){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} *As a result … realized*. Ch. 隨順覺, Skt. *\*anubodhana*. [\[back\]](#ref2)
+2. {:#n2} <em>As a result … realized</em>. Ch. 隨順覺, Skt. <em>\*anubodhana</em>. [\[back\]](#ref2)
 
 ---
 
