--- a/01_agama/samyukta/01/SA1_21.md
+++ b/01_agama/samyukta/01/SA1_21.md
@@ -53,7 +53,7 @@ The monk said to the Buddha, “I’ve understood, Bhagavān! I’ve understood,
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.35-36](https://suttacentral.net/sn22.35){:target="_blank"} and similar to [SN 22.63-65](https://suttacentral.net/sn22.63){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} *follows the tendencies … follows death*. Ch. 隨使使…隨使死. The exact meaning of 隨使 is unclear and appears to be an invention by the Chinese translator (or perhaps 隨使 should be emended to 隨 or 隨順). I’ve translated it conservatively as “follow,” but I believe it may mean “to serve.” On the reading of the Pali equivalent to 隨使死 (anumīyati) found in [SN 22.36](https://suttacentral.net/sn22.36){:target="_blank"}, see Bodhi’s note 49 on p.1053-4 of *Connected Discourses*, Vol. I. He says Spk reads the term as equivalent to Skt. anumṛyate ("dies along with"), which would agree with the Chinese. [\[back\]](#ref2)
+2. {:#n2} <em>follows the tendencies … follows death</em>. Ch. 隨使使…隨使死. The exact meaning of 隨使 is unclear and appears to be an invention by the Chinese translator (or perhaps 隨使 should be emended to 隨 or 隨順). I’ve translated it conservatively as “follow,” but I believe it may mean “to serve.” On the reading of the Pali equivalent to 隨使死 (anumīyati) found in [SN 22.36](https://suttacentral.net/sn22.36){:target="_blank"}, see Bodhi’s note 49 on p.1053-4 of <em>Connected Discourses</em>, Vol. I. He says Spk reads the term as equivalent to Skt. anumṛyate ("dies along with"), which would agree with the Chinese. [\[back\]](#ref2)
 
 ---
 
