--- a/01_agama/samyukta/01/SA1_5.md
+++ b/01_agama/samyukta/01/SA1_5.md
@@ -31,7 +31,7 @@ next: SA1_6.html
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.52](https://suttacentral.net/sn22.52){:target="_blank"} and [SĀ 2.5](../02/sa2_5.html){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} The *Taisho* edition includes a note describing variant sūtras that’s identical to the one found in [SĀ 1.1](sa1_1.html){:target="_blank"}; however, these variants would be inconsistent with the summary verse at the end of [SĀ 1.10](sa1_10.html){:target="_blank"}, and the parallel sūtra at [SĀ 2.5](../02/sa2_5.html){:target="_blank"} doesn’t have these variants. I have followed Yinshun’s lead in ignoring this variant note. [\[back\]](#ref2)
+2. {:#n2} The <em>Taisho</em> edition includes a note describing variant sūtras that’s identical to the one found in [SĀ 1.1](sa1_1.html){:target="_blank"}; however, these variants would be inconsistent with the summary verse at the end of [SĀ 1.10](sa1_10.html){:target="_blank"}, and the parallel sūtra at [SĀ 2.5](../02/sa2_5.html){:target="_blank"} doesn’t have these variants. I have followed Yinshun’s lead in ignoring this variant note. [\[back\]](#ref2)
 
 ---
 
