--- a/01_agama/samyukta/01/SA1_8.md
+++ b/01_agama/samyukta/01/SA1_8.md
@@ -27,7 +27,7 @@ next: SA1_9.html
 
 ### Notes
 
-1. {:#n1} This sūtra is similar to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and parallel with [SĀ 2.8](../02/SA2_8.html){:target="_blank"}. The *Taisho* version of this sūtra copies content from [SĀ 1.10 (7)](SA1_10.html){:target="_blank"} into its beginning. I’ve followed Yinshun’s lead in ignoring this material as spurious on the grounds that the summary verse for this group of sūtras only mentions one sūtra on delight. We should also note that [SĀ 2.8](../02/SA2_8.html){:target="_blank"} would be a strong parallel if we delete the added material, which would then maintain the pattern of SĀ 1.1-10 corresponding closely to SĀ 2.1-10. [\[back\]](#ref1)
+1. {:#n1} This sūtra is similar to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and parallel with [SĀ 2.8](../02/SA2_8.html){:target="_blank"}. The <em>Taisho</em> version of this sūtra copies content from [SĀ 1.10 (7)](SA1_10.html){:target="_blank"} into its beginning. I’ve followed Yinshun’s lead in ignoring this material as spurious on the grounds that the summary verse for this group of sūtras only mentions one sūtra on delight. We should also note that [SĀ 2.8](../02/SA2_8.html){:target="_blank"} would be a strong parallel if we delete the added material, which would then maintain the pattern of SĀ 1.1-10 corresponding closely to SĀ 2.1-10. [\[back\]](#ref1)
 
 ---
 
