--- a/01_agama/samyukta/02/SA2_129.md
+++ b/01_agama/samyukta/02/SA2_129.md
@@ -26,7 +26,7 @@ next: SA2_130.html
 5\. That group of monks then went to Venerable Ānanda after having this discussion and sat to one side. They then asked Ānanda about the above subject.
 {: #p5}
 
-6\. It was then that Ānanda told the monks, “Listen closely, and consider it well. I will explain it for you. If the world, the world’s names, the world’s feelings, the world’s expressions, and the world’s languages are all entered, the world proliferates. Venerables, that’s to say that when the eye enters the world, the world’s names, the world’s feelings, the world’s expressions, and the world’s languages, the world proliferates. *The ear, nose, tongue, body, and mind are likewise.*
+6\. It was then that Ānanda told the monks, “Listen closely, and consider it well. I will explain it for you. If the world, the world’s names, the world’s feelings, the world’s expressions, and the world’s languages are all entered, the world proliferates. Venerables, that’s to say that when the eye enters the world, the world’s names, the world’s feelings, the world’s expressions, and the world’s languages, the world proliferates. <em>The ear, nose, tongue, body, and mind are likewise.</em>
 {: #p6}
 
 7\. “The well-versed noble disciple truly knows the formation, cessation, enjoyment, trouble, and escape from the six sense fields. This is called the noble disciple who travels to the end of the world, knows the world, is respected by the world, and traverses the world.”
