--- a/01_agama/samyukta/02/SA2_130.md
+++ b/01_agama/samyukta/02/SA2_130.md
@@ -17,7 +17,7 @@ next: ../03/index.html
 2\. It was then that the Bhagavān addressed the monks, “Having a teacher and having a disciple who lives nearby makes living alone painful. Having no teacher and no disciple who lives nearby makes living alone pleasant.
 {: #p2}
 
-3\. “How does having a teacher or a disciple living nearby make living alone painful? Conditioned by the eye and forms, bad and unskillful feelings arise together with greed, anger, and delusion. If a monk practices this teaching, he’s said to have a teacher. If he abides on the edge of this, he’s said to have a disciple who lives nearby. *The ear, nose, tongue, body, and mind are likewise.* Thus, having a teacher and having a disciple living nearby makes living alone constant suffering.
+3\. “How does having a teacher or a disciple living nearby make living alone painful? Conditioned by the eye and forms, bad and unskillful feelings arise together with greed, anger, and delusion. If a monk practices this teaching, he’s said to have a teacher. If he abides on the edge of this, he’s said to have a disciple who lives nearby. <em>The ear, nose, tongue, body, and mind are likewise.</em> Thus, having a teacher and having a disciple living nearby makes living alone constant suffering.
 {: #p3}
 
 4\. “How does having no teacher and no disciple who lives nearby make living alone constant happiness? Conditioned by the eye and forms, bad and unskillful feelings arise together with greed, anger, and delusion. That monk who doesn’t practice this is said to have no teacher. Not depending on that abode, he’s said to have no disciple living nearby. This is called having no teacher and no disciple living nearby, which makes living alone constant happiness.
@@ -28,6 +28,8 @@ next: ../03/index.html
 
 6\. After the Buddha spoke this sūtra, the monks who heard what he taught rejoiced and accepted it.
 {:#p6}
+
+---
 
 ### Notes
 
