--- a/01_agama/samyukta/06/SA6_5.md
+++ b/01_agama/samyukta/06/SA6_5.md
@@ -75,7 +75,7 @@ He abides forever in Parinirvāṇa.”
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 36.6](https://suttacentral.net/sn36.6){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} *inclined*. The Chinese literally reads: “They become inclined to the inclination of craving.” Inclination here is likely a translation of S. *anuśaya*, which is sometimes translated as “underlying tendency.” [\[back\]](#ref2)
+2. {:#n2} <em>inclined</em>. The Chinese literally reads: “They become inclined to the inclination of craving.” Inclination here is likely a translation of S. <em>anuśaya</em>, which is sometimes translated as “underlying tendency.” [\[back\]](#ref2)
 
 ---
 
