--- a/01_agama/samyukta/07/SA7_10-11.md
+++ b/01_agama/samyukta/07/SA7_10-11.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 7. The Abodes of Mindfulness | 10 (612). The Archer'
+title: 'The Related Discourses | 7. The Abodes of Mindfulness | 10-11 (612). The Archer'
 type: kramdown
 base: ../../../
 previous: index.html
@@ -9,7 +9,7 @@ next: ../10/index.html
 
 # [The Related Discourses](../index.html)
 ## [7. The Abodes of Mindfulness](index.html)
-### 10 (612). The Archer
+### 10-11 (612). The Archer
 
 
 
@@ -19,7 +19,7 @@ next: ../10/index.html
 2\. It was then that the Bhagavān addressed the monks, “Suppose a person holds the four kinds of bow and shoots an arrow with great strength and skill at a palm tree’s shadow. It will fly past it without being blocked. Thus are the progress, skill, sharp faculties, and wisdom of the Tathāgata’s four kinds of disciple. For a whole hundred-year lifespan, they are taught a hundred years’ worth of the Tathāgata’s teaching and instruction. The only time that’s not the case is when they stop to eat, mend, bathe, or sleep. In between, they always discuss and always listen [to his teaching]. Wise, insightful, and sharp, they fully fathom, accept, and retain the Tathāgata’s teaching without obstacles. They don’t need to ask repeated questions of the Tathāgata. The Tathāgata’s teachings have no final ending. Listening to them for an entire lifetime, the Tathāgata’s teachings would still be unending when a person’s life ends after a hundred years.
 {:#p2}
 
-3\. “You should know that the Tathāgata’s teachings are measureless and limitless. Their bodies of names, lines, and themes are also measureless and without any final end. That teaching is the four abodes of mindfulness. What are the four? They are the mindful abode of body … feelings … mind … the mindful abode of principles.”
+3\. “You should know that the Tathāgata’s teachings are measureless and limitless. Their bodies of names, lines, and themes are also measureless and without any final end. That teaching is the four abodes of mindfulness. What are the four? They are the mindful abode of body … feelings … mind … the mindful abode of principles. <em>(7.11 adds this conclusion:)</em> Therefore, monks, cultivation of these four abodes of mindfulness produces motivation. With energy, technique, right mindfulness, and right knowledge, you should train yourselves.”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
