--- a/01_agama/samyukta/11/SA11_41.md
+++ b/01_agama/samyukta/11/SA11_41.md
@@ -14,7 +14,7 @@ next: SA11_58.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Suppose a monk grows tired of form and parts with desire for it. It ceases completely, doesn’t arise, and he’s liberated from it. This is called the unsurpassed, correct, and complete awakening. *Feeling, conception, volition, and consciousness are likewise.* Suppose, again, a monk grows tired of form and parts with desire for it. It doesn’t arise, and he’s liberated from it. This is called an arhat liberated by wisdom. *Feeling, conception, volition, and consciousness are likewise.* Monks, what are the various differences between the Tathāgata, Arhat, and Completely Awakened One and an arhat who’s liberated by wisdom?”
+2\. It was then that the Bhagavān addressed the monks, “Suppose a monk grows tired of form and parts with desire for it. It ceases completely, doesn’t arise, and he’s liberated from it. This is called the unsurpassed, correct, and complete awakening. <em>Feeling, conception, volition, and consciousness are likewise.</em> Suppose, again, a monk grows tired of form and parts with desire for it. It doesn’t arise, and he’s liberated from it. This is called an arhat liberated by wisdom. <em>Feeling, conception, volition, and consciousness are likewise.</em> Monks, what are the various differences between the Tathāgata, Arhat, and Completely Awakened One and an arhat who’s liberated by wisdom?”
 {:#p2}
 
 3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma support! Please let him explain it. Once they hear it, the monks will accept and approve of it.”
