--- a/01_agama/samyukta/12/SA12_34.md
+++ b/01_agama/samyukta/12/SA12_34.md
@@ -32,7 +32,7 @@ next: SA12_37.html
 7\. “After cultivating the awakening factor of mindfulness, he discriminates qualities. At that point, he’s cultivating skill in the awakening factor of discriminating qualities. After cultivating the awakening factor of discriminating qualities skillfully, he cultivates its fulfillment.
 {: #p7}
 
-8\. *The awakening factors of effort, joy, calm, samādhi, and equanimity are likewise explained. Like the mindfulness of the internal body, thus are the external body, internal and external body, feelings, mind, and principles explained.* [\[2\]](#n2){:#ref2} “He abides mindfully contemplating principles as principles. He focuses his mind, ties it to this mindfulness, and doesn’t forget it. At that point, he’s skillfully cultivating the awakening factor of mindfulness. After skillfully cultivating the awakening factor of mindfulness, he cultivates its fulfillment *up to the awakening factor of equanimity, which is likewise explained.* This is called a monk who gradually produces the seven factors of awakening in sequence. After they are gradually produced in sequence, he cultivates their fulfillment.”
+8\. <em>The awakening factors of effort, joy, calm, samādhi, and equanimity are likewise explained. Like the mindfulness of the internal body, thus are the external body, internal and external body, feelings, mind, and principles explained.</em> [\[2\]](#n2){:#ref2} “He abides mindfully contemplating principles as principles. He focuses his mind, ties it to this mindfulness, and doesn’t forget it. At that point, he’s skillfully cultivating the awakening factor of mindfulness. After skillfully cultivating the awakening factor of mindfulness, he cultivates its fulfillment <em>up to the awakening factor of equanimity, which is likewise explained.</em> This is called a monk who gradually produces the seven factors of awakening in sequence. After they are gradually produced in sequence, he cultivates their fulfillment.”
 {: #p8}
 
 9\. After the Buddha spoke this sūtra, the monks who heard what he taught rejoiced and approved.
