--- a/01_agama/samyukta/13/SA13_15.md
+++ b/01_agama/samyukta/13/SA13_15.md
@@ -25,7 +25,7 @@ next: SA13_16.html
 ### Notes
 
 1. {:#n1}This sūtra is reconstituted according to a variant note that follows [SĀ 13.14](SA13_14.html){:target="_blank"}, which substitutes “correct man” and “great man” for “trainee” and “adept.” [\[back\]](#ref1)
-2. {:#n2}*Correct man and great man*. These are literal translations of C. 正士 and 大士. They were likely translations of S. *sat-puruṣa* and *mahā-puruṣa*. [\[back\]](#ref2)
+2. {:#n2}<em>Correct man and great man</em>. These are literal translations of C. 正士 and 大士. They were likely translations of S. <em>sat-puruṣa</em> and <em>mahā-puruṣa</em>. [\[back\]](#ref2)
 
 ---
 
