--- a/01_agama/samyukta/13/SA13_22.md
+++ b/01_agama/samyukta/13/SA13_22.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 22. Wholesome and Unwholesome Aggregates'
+title: 'The Related Discourses | 13. The Noble Path | 22 (767). Good and Bad Aggregates'
 type: kramdown
 base: ../../../
 previous: SA13_21.html
@@ -9,28 +9,31 @@ next: SA13_23.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 22. Wholesome and Unwholesome Aggregates
+### 22 (767). Wholesome and Unwholesome Aggregates
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “The expression ‘unwholesome aggregate’ means the five hindrances. This is the correct explanation. What is the reason for that? It is an entirely unwholesome aggregate that’s called the five hindrances. What are the five? They are the hindrance of greed and the hindrances of anger, drowsiness, restlessness, and doubt.
+2\. It was then that the Bhagavān addressed the monks, “The expression ‘bad aggregate’ means the five hindrances. This is the correct explanation. What is the reason for that? It’s an entirely unwholesome aggregate that’s called the five hindrances. What are the five? They are the hindrance of greed … anger … drowsiness … restlessness, and the hindrance of doubt.
 {:#p2}
 
-3\. “The expression ‘wholesome aggregate’ means the noble eightfold path. This is called the correct explanation. What is the reason for that? It is an entirely, fully, and purely wholesome aggregate that’s called the noble eightfold path. What are the eight? They are right view, right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration.”
+3\. “The expression ‘good aggregate’ means the noble eightfold path. This is called the correct explanation. What is the reason for that? It’s an entirely, fully, and purely good aggregate that’s called the noble eightfold path. What are the eight? They are right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right <em>samādhi</em>.”
 {:#p3}
 
-4\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
+4\. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
-1. {:#n1}Similar Pali passages are [*AN* 5.52](https://suttacentral.net/an5.52){:target="_blank"}, [*SN* 47.5](https://suttacentral.net/sn47.5){:target="_blank"}, and [*SN* 47.45](https://suttacentral.net/sn47.45){:target="_blank"}. *AN* 5.52 and *SN* 47.5 have only the description of the five coverings. *SN* 47.45 mentions only the aggregate of the wholesome but defines it as the four abodes of mindfulness. See also *EA* 32.2 and *SA* 7.9 and 12.22. [\[back\]](#ref1)
+
+1. {:#n1}Similar passages can be found in Pali suttas such as [AN 5.52](https://suttacentral.net/an5.52){:target="_blank"}, [SN 47.5](https://suttacentral.net/sn47.5){:target="_blank"}, and [SN 47.45](https://suttacentral.net/sn47.45){:target="_blank"}. AN 5.52 and SN 47.5 have only the description of the five hindrances. SN 47.45 mentions the good aggregate but defines it as the four abodes of mindfulness. See also EĀ 32.2 and SĀ 7.9 and 12.22. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 5 November 2019
+Last Revised: 1 October 2022
 {:.revised}
 
 ---
