--- a/01_agama/samyukta/13/SA13_23.md
+++ b/01_agama/samyukta/13/SA13_23.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 23. Good Friends'
+title: 'The Related Discourses | 13. The Noble Path | 23 (768). Good Friends'
 type: kramdown
 base: ../../../
 previous: SA13_22.html
@@ -9,29 +9,32 @@ next: SA13_24.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 23. Good Friends
+### 23 (768). Good Friends
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in  Rājagṛha at a mountain valley monastery.[\[2\]](#n2){:#ref2}
 {:#p1}
 
-2\. It was then that the Venerable Ānanda had this thought  while alone in a quiet abode, “Half of the religious practice is good friends, good associates, and good followers.”
+2\. It was then that the Venerable Ānanda had this thought while alone in a quiet abode, “Half of the religious practice is good friends, good associates, and good followers …”
 {:#p2}
 
-3\. *Up to* the Buddha told Ānanda, “The religious practice is entirely, fully, and purely good friends. What is the reason for that? It was because of good friends that I caused sentient beings to cultivate right view, relying on seclusion, having no desire, cessation, and an orientation towards renunciation *up to* cultivate right concentration, relying on seclusion, having no desire, cessation, and an orientation towards renunciation.”
+3\. The Buddha told Ānanda, “The religious practice is entirely, fully, and purely good friends. What is the reason for that? It was because of good friends that I led sentient beings to cultivate right view by relying on seclusion, having no desire, cessation, and being oriented toward renunciation … to cultivate right <em>samādhi</em> by relying on seclusion, having no desire, cessation, and an orientation towards renunciation.”
 {:#p3}
 
-4\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
+4\. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
-1. {:#n1}Pali parallel is [*SN* 45.2](https://suttacentral.net/sn45.2){:target="_blank"}. At first glance, the Pali appears to be an expanded version of this sutra, but the Chinese does indicate that it’s been abbreviated between Ānanda’s initial comment to the Buddha and his reply. See also *SA* 12.23. [\[back\]](#ref1)
-2. {:#n2}*a mountain valley monastery*. The exact location this represents so far is a mystery. The location is found five times in the *Saṃyukta Āgama*, but it’s not used anywhere else in the Chinese Buddhist canon and doesn’t correspond to a similar location in the parallel Pali passages I could locate. [\[back\]](#ref2)
+
+1. {:#n1}Pali parallel is [SN 45.2](https://suttacentral.net/sn45.2){:target="_blank"}. At first glance, the Pali appears to be an expanded version of this sūtra, but the Chinese does indicate that it’s been abbreviated between Ānanda’s initial thought to the Buddha’s reply. Cf. SĀ 12.23. [\[back\]](#ref1)
+2. {:#n2}<em>a mountain valley monastery</em>. The exact location this represents is so far a mystery. The location is found five times in the <em>Saṃyukta Āgama</em>, but it’s not used anywhere else that I can find. It doesn’t correspond to a similar location in the parallel Pali passages that I could locate. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 5 November 2019
+Last Revised: 1 October 2022
 {:.revised}
 
 ---
