--- a/01_agama/samyukta/13/SA13_24.md
+++ b/01_agama/samyukta/13/SA13_24.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 24. The Brahmin’s Chariot'
+title: 'The Related Discourses | 13. The Noble Path | 24 (769). The Brahmin’s Chariot'
 type: kramdown
 base: ../../../
 previous: SA13_23.html
@@ -9,51 +9,53 @@ next: SA13_25.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 24. The Brahmin’s Chariot
+### 24 (769). The Brahmin’s Chariot
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. In the early morning, Venerable Ānanda put on his robe, took his bowl, and went to Śrāvastī to solicit alms. The brahmin Jāṇussoṇi[\[2\]](#n2){:#ref2} was riding a chariot with white horses, and a crowd of many youths was following him. The horses, chariot, bridle, and whip were white. He wore a white hat, his parasol was white, and he held a white wisk in hand. He wore white clothes, his jewelry was white, white powder was smeared on his body, and his followers were all in white. They were leaving Śrāvastī intending to go to a grove for instruction and recitation. When a crowd saw them, they all said, “Good vehicle, good vehicle! That’s called the Brahma vehicle!”
+2\. In the early morning, Venerable Ānanda put on his robe, took his bowl, and went to Śrāvastī to solicit alms. The priest Jāṇussoṇi[\[2\]](#n2){:#ref2} was riding a chariot with white horses, and a crowd of many youths was following him. The horses, chariot, bridle, and whip were white. He wore a white hat, his parasol was white, and he held a white whisk in hand. He wore white clothes, his jewelry was white, white powder was smeared on his body, and his followers were all in white. They were leaving Śrāvastī intending to go to a grove for instruction and recitation. When the crowds saw them, they all said, “Excellent vehicle, excellent vehicle! That’s called the Brahma vehicle!”
 {:#p2}
 
-3\. Venerable Ānanda then saw this brahmin’s retinue and many accoutrements all in white. After he saw this, he went into the city to solicit alms. Returning to the monastery, he put away his robe and bowl and washed his feet. He then went to the Buddha, prostrated at the Buddha’s feet, and withdrew to sit at one side. He said, “Bhagavān, today in the early morning, I put on my robe, took my bowl, and went to Śrāvastī to solicit alms. I saw the brahmin Jānusoṇi riding a chariot with white horses. His retinue and many accoutrements were all in white. A crowd of people called out, ‘Good vehicle, good vehicle! That’s called the Brahma vehicle!’ Bhagavān, is there a worldly person’s vehicle or Brahma vehicle in the right teaching and discipline?”
+3\. Venerable Ānanda then saw that this priest’s retinue and many accoutrements were all white. After he saw this, he went into the city to solicit alms. Returning to the monastery, he put away his robe and bowl and washed his feet. He then went to the Buddha, prostrated at the Buddha’s feet, and withdrew to sit at one side. He said, “Bhagavān, today in the early morning, I put on my robe, took my bowl, and went to Śrāvastī to solicit alms. I saw the priest Jānusoṇi riding a chariot with white horses. His retinue and many accoutrements were all white. A crowd of people called out, ‘Excellent vehicle, excellent vehicle! That’s called the Brahma vehicle!’ Bhagavān, is there a worldly person’s vehicle or a Brahma vehicle in the right teaching and discipline?”
 {:#p3}
 
-4\. The Buddha told Ānanda, “That was a worldly person’s vehicle, not the Brahma vehicle of my teaching and discipline. Ānanda, my vehicle of the right teaching and discipline is the divine vehicle, the Brahma vehicle, and the great vehicle, which can control the army of afflictions. Listen closely and well consider this. I will explain it for you.
+4\. The Buddha told Ānanda, “That was a worldly person’s vehicle, not the Brahma vehicle of my teaching and discipline. Ānanda, my vehicle of the right teaching and discipline is the divine vehicle, the Brahma vehicle, and the great vehicle, which can control the army of afflictions. Listen closely and consider this well. I will explain it for you.
 {:#p4}
 
-5\. “Ānanda, what is the vehicle of the right teaching and discipline, the divine vehicle, the Brahma vehicle, and the great vehicle, which can control the army of afflictions? That refers to the right eightfold path, which is right view *up to* right concentration. Ānanda, this is called the vehicle of the right teaching and discipline, the divine vehicle, the Brahma vehicle, and the great vehicle, which can control the army of afflictions.”
+5\. “Ānanda, what is the vehicle of the right teaching and discipline, the divine vehicle, the Brahma vehicle, and the great vehicle, which can control the army of afflictions? That refers to the right eightfold path, which is right view … right <em>samādhi</em>. Ānanda, this is called the vehicle of the right teaching and discipline, the divine vehicle, the Brahma vehicle, and the great vehicle, which can control the army of afflictions.”
 {:#p5}
 
 6\. The Bhagavān then spoke in verse:
 {:#p6}
 
 * {:.verse}“Faith and precepts are the teaching’s yoke;\\
-Shame and conscience are its long tethers;\\
+Conscience and modesty are its long tethers;\\
 Right mindfulness well maintained\\
-Is like its good driver.
+Is like a good driver.
 
-* {:.verse}Renunciation and concentration are poles;\\
-Wisdom and effort are wheels;\\
+* {:.verse}Renunciation and <em>samādhi</em> are the poles;\\
+Wisdom and effort are the wheels;\\
 Detachment and tolerance are armor;\\
 Peace and following the teaching move it.
 
 * {:.verse}He advances and doesn’t retreat,\\
 Constant is his sorrowless standpoint;\\
-The wise man rides a war chariot\\
+The wise man rides this war chariot\\
 That defeats the foe of ignorance.”
 
+---
+
 ### Notes
-1. {:#n1}This sutra is parallel to [*SN* 45.4](https://suttacentral.net/sn45.4){:target="_blank"}. The Chinese has fewer verses, but they correspond to the first three stanzas in the Pali. [\[back\]](#ref1)
-2. {:#n2}Guṇabhadra translates his name as “Giving Rise to Hearing,” which would seem to interpret a Sanskrit name like Jānuśṛṇoti. I’ve used the Pali form for now until I find a Sanskrit attestation. [\[back\]](#ref2)
+
+1. {:#n1}This <em>sūtra</em> is parallel to [SN 45.4](https://suttacentral.net/sn45.4){:target="_blank"}. The Chinese has fewer verses, but they correspond to the first three stanzas of the Pali <em>sutta</em>. [\[back\]](#ref1)
+2. {:#n2}Guṇabhadra translates his name as “Giving Rise to Hearing,” which would seem to interpret a Sanskrit equivalent like Jānuśṛṇoti. I’ve used the Pali form for now until I find a Sanskrit attestation. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 8 November 2019
+Last Revised: 1 October 2022
 {:.revised}
 
 ---
-
