--- a/01_agama/samyukta/13/SA13_26.md
+++ b/01_agama/samyukta/13/SA13_26.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 26. The Other Shore'
+title: 'The Related Discourses | 13. The Noble Path | 26 (771). The Other Shore'
 type: kramdown
 base: ../../../
 previous: SA13_25.html
@@ -9,15 +9,15 @@ next: SA13_27.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 26. The Other Shore
+### 26 (771). The Other Shore
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. The brahmin Jāṇussoṇi then came to visit the Buddha and exchanged polite greetings and inquires with the Bhagavān. Afterward, he withdrew to sit at one side. He said, “Gautama, there is what is not the other shore and what is the other shore. Gautama, what is not the other shore, and what is the other shore?”
+2\. The priest Jāṇussoṇi then came to visit the Buddha and exchanged polite greetings and inquiries with the Bhagavān. Afterward, he withdrew to sit at one side. He said, “Gautama, there is what’s not the other shore and what is the other shore. Gautama, what’s not the other shore, and what is the other shore?”
 {:#p2}
 
-3\. The Buddha told the brahmin, “Wrong view is not the other shore, but right view is the other shore. Wrong intention, wrong speech, wrong action, wrong livelihood, wrong effort, wrong mindfulness, and wrong concentration are not the other shore, but right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration are the other shore.”
+3\. The Buddha told the priest, “Wrong view is not the other shore, but right view is the other shore. Wrong intention … wrong speech … wrong action … wrong livelihood … wrong method … wrong mindfulness … wrong <em>samādhi</em> is not the other shore, but right intention … right speech … right action … right livelihood … right method … right mindfulness … right <em>samādhi</em> is the other shore.”
 {:#p3}
 
 4\. The Bhagavān then spoke in verse:
@@ -33,17 +33,20 @@ There are some who can follow it;\\
 They are the ones who can cross over\\
 That difficult ford of birth-and-death.”
 
-5\. The brahmin Jāṇussoṇi then heard what the Buddha had taught, and he rejoiced and was gladdened. He rose from his seat and left.
+5\. When the priest Jāṇussoṇi heard what the Buddha taught, he rejoiced and was gladdened. He then rose from his seat and left.
 {:#p5}
 
+---
+
 ### Notes
-1. {:#n1}This sutra is parallel with [AN 10.117](https://suttacentral.net/an10.117){:target="_blank"}, and <a href="" target="_blank">[<em>SN</em> 45.34</a>](https://suttacentral.net/sn45.34){:target="_blank"} is also a parallel variant in the Pali. [\[back\]](#ref1)
+
+1. {:#n1}This <em>sūtra</em> is parallel with [AN 10.117](https://suttacentral.net/an10.117){:target="_blank"}, and [SN 45.34](https://suttacentral.net/sn45.34){:target="_blank"} is also similar. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 11 August 2019
+Last Revised: 1 October 2022
 {:.revised}
 
 ---
