--- a/01_agama/samyukta/13/SA13_28.md
+++ b/01_agama/samyukta/13/SA13_28.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 28. The Other Shore (3)'
+title: 'The Related Discourses | 13. The Noble Path | 28 (773). The Other Shore (3)'
 type: kramdown
 base: ../../../
 previous: SA13_27.html
@@ -9,15 +9,15 @@ next: SA13_29.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 28. The Other Shore (3)
+### 28 (773). The Other Shore (3)
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. The Venerable Ānanda then came to visit the Buddha, prostrated at his feet, and withdrew to sit at one side. He said, “Bhagavān, there is what is not the other shore and what is the other shore. Bhagavān, what is not the other shore, and what is the other shore?”
+2\. Venerable Ānanda then came to visit the Buddha, prostrated at his feet, and withdrew to sit at one side. He said, “Bhagavān, there is what’s not the other shore and what is the other shore. Bhagavān, what’s not the other shore, and what is the other shore?”
 {:#p2}
 
-3\. The Buddha told Ānanda, “Wrong view is not the other shore, but right view is the other shore. Wrong intention, wrong speech, wrong action, wrong livelihood, wrong effort, wrong mindfulness, and wrong concentration are not the other shore, but right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration are the other shore.”
+3\. The Buddha told Ānanda, “Wrong view is not the other shore, but right view is the other shore. Wrong intention … wrong speech … wrong action … wrong livelihood … wrong method … wrong mindfulness … wrong <em>samādhi</em> is not the other shore, but right intention … right speech … right action … right livelihood … right method … right mindfulness … right <em>samādhi</em> is the other shore.”
 {:#p3}
 
 4\. The Bhagavān then spoke in verse:
@@ -33,18 +33,20 @@ There are some who can follow it;\\
 They are the ones who can cross over\\
 That difficult ford of birth-and-death.”\\
 
-5\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+5\. After the Buddha spoke this <em>sūtra</em>, Venerable Ānanda rejoiced and handed it down.
 {:#p5}
+
+---
 
 ### Notes
 
-1. {:#n1}This sutra is reconstituted from a description after [SA 13.26](SA13_26.html){:target="_blank"} at 200b11. It’s parallel with [AN 10.117](https://suttacentral.net/an10.117){:target="_blank"} and [SN 45.34](https://suttacentral.net/sn45.34){:target="_blank"}, but the Pali doesn’t have this interlocutor as a variant. [\[back\]](#ref1)
+1. {:#n1} This sūtra is reconstituted according to a variant note that follows [SĀ 13.26](SA13_26.html){:target="_blank"}, which replaces the interlocutor with “a certain monk” and “Venerable Ānanda,” and the Buddha asks the monks in a third version. It’s parallel with [AN 10.117](https://suttacentral.net/an10.117){:target="_blank"} and [SN 45.34](https://suttacentral.net/sn45.34){:target="_blank"}, but the Pali doesn’t have a variant with this interlocutor. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 11 September 2019
+Last Revised: 1 October 2022
 {:.revised}
 
 ---
