--- a/01_agama/samyukta/13/SA13_30.md
+++ b/01_agama/samyukta/13/SA13_30.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 30. What’s Rightly Considered'
+title: 'The Related Discourses | 13. The Noble Path | 30 (775). What’s Rightly Considered'
 type: kramdown
 base: ../../../
 previous: SA13_29.html
@@ -9,29 +9,31 @@ next: SA13_74.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 30. What’s Rightly Considered
+### 30 (775). What’s Rightly Considered
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Among inner things, I don’t see a single one that can cause the arising of a bad and unwholesome thing that’s yet to arise or to redouble one that has already arisen and make it grow like what’s not rightly considered. Monks, something that’s not rightly considered causes wrong view to occur that’s yet to occur and to redouble it when it has already occurred. Thus wrong intention, wrong speech, wrong action, wrong livelihood, wrong effort, wrong mindfulness, and wrong concentration  are also explained.
+2\. It was then that the Bhagavān addressed the monks, “Among inner things, I don’t see a single one that can cause the arising of evil and bad things that have yet to arise or the redoubling of those that have already arisen and make them grow like not rightly considering [them]. Monks, not rightly considering it causes wrong view to occur that’s yet to occur and to redouble it when it has already occurred. <em>Wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong </em>samādhi<em> are likewise explained.</em>
 {:#p2}
 
-3\. “Monks, among inner things, I do not see a single one that prevents the arising of a bad and unwholesome thing that’s yet to arise or to cease a bad and unwholesome thing that has already arisen like what’s rightly considered.  Monks, something rightly considered prevents wrong view from arising that’s yet to arise and ceases it when it has already arisen. Like wrong view, wrong intention, wrong speech, wrong action, wrong livelihood, wrong effort, wrong mindfulness, and wrong concentration are thus explained.”
+3\. “Monks, among inner things, I don’t see a single one that prevents the arising of evil and bad things that have yet to arise or to cease those that have already arisen like rightly considering them. Monks, rightly considering it prevents wrong view from arising that’s yet to arise and ceases it when it has already arisen. <em>Wrong view, wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong </em>samādhi<em> are likewise explained.</em>”
 {:#p3}
 
-4\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and handed it down.
+4\. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
+
+---
 
 ### Notes
 
-1. {:#n1}This sutra is similar to [SN 45.83](https://suttacentral.net/sn45.83){:target="_blank"} and [90](https://suttacentral.net/sn45.90){:target="_blank"}, but it addresses the wrong factors of the noble path.
+1. {:#n1}This <em>sūtra</em> is similar to [SN 45.83](https://suttacentral.net/sn45.83){:target="_blank"} and [90](https://suttacentral.net/sn45.90){:target="_blank"}, but it addresses the factors of the wrong path.
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 11 September 2019
+Last Revised: 1 October 2022
 {:.revised}
 
 ---
