--- a/01_agama/samyukta/13/SA13_6.md
+++ b/01_agama/samyukta/13/SA13_6.md
@@ -32,7 +32,7 @@ The Buddha addressed the monk, “There is. It’s known as the noble eightfold 
 ### Notes
 
 1. {:#n1} This sūtra is partially parallel with [SN 45.7](https://suttacentral.net/sn45.7){: target="_blank"}, which contains a question about the “deathless” and equates it with the end of desire, anger, and delusion. [\[back\]](#ref1)
-2. {:#n2}*immortal*. C. 甘露, P. *amata*, S. *amṛta*. The Chinese translates S. *amṛta* as ‘sweet dew,’ which was a mythical substance in Chinese legends. *Amṛta* was probably the inspiration for the Greek myth of ambrosia, as both were the food of the gods that gave them immortality. [\[back\]](#ref2)
+2. {:#n2}<em>immortal</em>. C. 甘露, P. <em>amata</em>, S. <em>amṛta</em>. The Chinese translates S. <em>amṛta</em> as ‘sweet dew,’ which was a mythical substance in Chinese legends. <em>Amṛta</em> was probably the inspiration for the Greek myth of ambrosia, as both were the food of the gods that gave them immortality. [\[back\]](#ref2)
 
 ---
 
