--- a/01_agama/samyukta/13/SA13_74.md
+++ b/01_agama/samyukta/13/SA13_74.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. Factors of the Noble Path | 74. The Eightfold Path'
+title: 'The Related Discourses | 13. Factors of the Noble Path | 74 (784). The Eightfold Path'
 type: kramdown
 base: ../../../
 previous: SA13_30.html
@@ -9,18 +9,18 @@ next: SA13_75.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 74. The Eightfold Path
+### 74 (784). The Eightfold Path
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “There’s wrong, and there’s right. Listen closely and well consider it. I will explain this for you.
+2\. It was then that the Bhagavān addressed the monks, “There’s wrong, and there’s right. Listen closely and consider it well. I will explain this for you.
 {: #p2}
 
-3\. “What’s wrong? This refers to wrong view … wrong concentration. What’s right? This refers to right view … right concentration.
+3\. “What’s wrong? This refers to wrong view … wrong <em>samādhi</em>. What’s right? This refers to right view … right <em>samādhi</em>.
 {: #p3}
 
-4\. “What’s right view? It’s refers to the teaching that there’s generosity, there’s the teaching, there are observances, there’s good conduct and bad conduct, and there are the results of good and bad conduct. There’s this world, and there’s the other world. There’s father and mother and the birth of sentient beings. There are arhats who well arrive, are well-headed, and know and realize for themselves the perfect abode, whether it’s in this or the other world: ‘My births have been ended, the religious practice has been established, the task has been accomplished. I know that I won’t be subject to a later existence.’
+4\. “What’s right view? It’s refers to the teaching that there’s generosity, there’s the teaching, there are observances, there are good conduct and bad conduct, and there are the results of good and bad conduct. There’s this world, and there’s the other world. There’s father and mother and the birth of sentient beings. There are arhats who arrive well, are headed well, and know and realize for themselves the perfect abode, whether it’s in this or the other world: ‘My births have been ended, the religious practice has been established, the task has been accomplished. I know that I won’t be subject to a later existence.’
 {: #p4}
 
 5\. “What’s right intention? It’s intent of renunciation, intent without anger, and intent that’s not harmful.
@@ -32,30 +32,31 @@ next: SA13_75.html
 7\. “What’s right action? It’s being free of killing, stealing, and sexual misconduct.
 {: #p7}
 
-8\. “What’s right livelihood? It’s pursuing clothing, food and drink, bedding, and medicine in ways that are according to the teaching and not contrary to the teaching.
+8\. “What’s right livelihood? It’s pursuing clothing, food and drink, bedding, and medicine in ways that are according to Dharma and not contrary to it.
 {: #p8}
 
-9\. “What’s right method? It’s desire, effort, method, setting out, striving, and the capability to work constantly and not retreat.
+9\. “What’s right method? It’s desire, effort, method, setting out, striving, and the ability to work constantly and not retreat.
 {: #p9}
 
-10\. “What’s right mindfulness? It’s mindfully following and remembering that’s not false or pointless.
+10\. “What’s right mindfulness? It’s mindfully following and remembering what’s not false or pointless.
 {: #p10}
 
-11\. “What’s right concentration? It’s abiding with mind unconfused, resolute, collected, tranquil, concentrated, and single-minded.”
+11\. “What’s right <em>samādhi</em>? It’s abiding with mind unconfused, resolute, collected, tranquil, in <em>samādhi</em>, and single-minded.”
 {: #p11}
 
-12\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and approved.
+12\. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.
 {: #p12}
 
-### Notes
-1. {:#n1} Parallels include [SN 45.8](https://suttacentral.net/sn45.8){: target="_blank"}, [SN 45.21](https://suttacentral.net/sn45.21){: target="_blank"}, [SA 13.25](SA13_25.html), and T 112. [\[back\]](#ref1)
+---
 
+### Notes
+1. {:#n1} Parallels include [SN 45.8](https://suttacentral.net/sn45.8){: target="_blank"}, [SN 45.21](https://suttacentral.net/sn45.21){: target="_blank"}, [SA 13.25](SA13_25.html){: target="_blank"}, and T112. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 1 October 2022
 {: .revised}
 
 ---
