--- a/01_agama/samyukta/14/SA14_3.md
+++ b/01_agama/samyukta/14/SA14_3.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 14. Mindfulness of Breathing | 3. Cultivating Mindfulness of Breathing'
+title: 'The Related Discourses | 14. Mindfulness of Breathing | 3 (803). Cultivating Mindfulness of Breathing'
 type: kramdown
 base: ../../../
 previous: index.html
@@ -9,30 +9,30 @@ next: SA14_17.html
 
 # [The Related Discourses](../index.html)
 ## [14. Mindfulness of Breathing](index.html)
-### 3. Cultivating Mindfulness of Breathing
+### 3 (803). Cultivating Mindfulness of Breathing
 
-1\. Thus I have heard: One time, the Buddha stayed at Anāthapiṇḍada Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Cultivate mindfulness of breathing. If a monk cultivates the mindfulness of breathing and cultivates it often, he’ll attain calmness of body and mind. He’ll cultivate and fulfill tranquility, purity, and the conceptions of insight with perception and examination.
+2\. It was then that the Bhagavān addressed the monks, “Cultivate the mindfulness of breathing. If a monk cultivates mindfulness of breathing and does so often, he’ll be calmed in body and mind. With perception and examination, tranquility, and consistency, he’ll cultivate and fulfill the conceptions of insight.
 {: #p2}
 
 3\. “How does he attain calmness of body and mind and fulfill tranquility, purity, and the conceptions of insight with perception and examination after often cultivating mindfulness of breathing?
 {: #p3}
 
-4\. “Suppose this monk lives depending on a village or town. In the early morning, he puts on his robe and takes his bowl into the village to solicit alms. He protects himself well, guards his faculties, and keeps his mind well restrained. After soliciting alms, he returns to his dwelling and puts away his robe and bowl. After washing his feet, he either goes to sit under a tree or in a dwelling in a forest or on bare ground out in the open. He sits correctly with his body upright and fixes his attention in front of him. He stops worldly cravings and secludes himself from desire purely. He stops anger … drowsiness … agitation and remorse … doubt. Freed from doubt and confusion, he attains certainty about the mind’s good qualities.
+4\. “Suppose this monk lives depending on a village or town. In the early morning, he puts on his robe and takes his bowl into the village to solicit alms. He protects himself well, guards his faculties, and keeps his mind well restrained. After soliciting alms, he returns to his dwelling and puts away his robe and bowl. After washing his feet, he either goes to sit under a tree, in a dwelling in a forest, or on bare ground out in the open. He sits correctly with his body upright and fixes his attention in front of him. He stops worldly cravings and secludes himself from desire purely. He stops anger … drowsiness … agitation and remorse … doubt. Freed from doubt and confusion, he attains certainty about the mind’s good qualities.
 {: #p4}
 
-5\. “He’s secluded from the five hindrances and disturbances in his mind that weaken the powers of wisdom, block discernment, and lead not to nirvāṇa. He’s mindful of internal calming, training well and fixing his attention. He’s mindful external calming, training well and fixing his attention.
+5\. “He’s secluded from the five hindrances and disturbances in his mind that weaken the powers of wisdom, block discernment, and lead not to nirvāṇa. He’s mindful of internal calming, training well and fixing his attention. He’s mindful of external calming, training well and fixing his attention.
 {: #p5}
 
-6\. “His breaths are long … his breaths are short … He perceives his whole body as he inhales. He trains well regarding the whole body as he inhales. He perceives his whole body as he exhales. He trains well regarding the whole body as he exhales. He perceives his whole body’s activity calm as he inhales. He trains well regarding the whole body’s activity calming as he inhales. He perceives his whole body’s activity calm as he exhales. He trains well regarding the whole body’s activity calming as he exhales.
+6\. “His breaths are long … His breaths are short … He perceives his whole body as he inhales. He trains well regarding his whole body as he inhales. He perceives his whole body as he exhales. He trains well regarding the whole body as he exhales. He perceives his whole body’s activity calm as he inhales. He trains well regarding the whole body’s activity calming as he inhales. He perceives his whole body’s activity calm as he exhales. He trains well regarding the whole body’s activity calming as he exhales.
 {: #p6}
 
 7\. “He perceives joy … perceives happiness … perceives mental activity … perceives mental activity calm as he inhales. He trains well, perceiving mental activity calming as he inhales. He perceives mental activity calm as he exhales. He trains well, perceiving mental activity calming as he exhales.
 {: #p7}
 
-8\. “He perceives his mind … perceives his mind’s gladness … perceives his mind’s concentration … perceives his mind’s liberation as he inhales. He trains well, perceiving his mind’s liberation as he inhales. He perceives his mind’s liberation as he exhales. He trains well, perceiving his mind’s liberation as he exhales.
+8\. “He perceives his mind … perceives his mind’s gladness … perceives his mind’s <em>samādhi</em> … perceives his mind’s liberation as he inhales. He trains well, perceiving his mind’s liberation as he inhales. He perceives his mind’s liberation as he exhales. He trains well, perceiving his mind’s liberation as he exhales.
 {: #p8}
 
 9\. “He observes impermanence … observes stopping … observes the lack of desire … observes cessation as he inhales. He trains well regarding the observation of cessation as he inhales. He observes cessation as he exhales. He trains well regarding the observation of cessation as he exhales.
@@ -41,16 +41,20 @@ next: SA14_17.html
 10\. “This is called cultivating the mindfulness of breathing. The body is calmed, and the mind is calmed. Tranquility, purity, and the conceptions of insight are cultivated and fulfilled with perception and examination.”
 {: #p10}
 
-11\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and approved.
+11\. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.
 {: #p11}
 
-<!--- Add an endnote for parallels, note that T101.15 is in other folder -->
+---
+
+### Notes
+
+1. {:#n1} This <em>sūtra</em> is parallel with [SN 54.1](https://suttacentral.net/sn54.1){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 2 October 2022
 {: .revised}
 
 ---
