--- a/01_agama/samyukta/19/SA19_15.md
+++ b/01_agama/samyukta/19/SA19_15.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 19. Indra | 15. The Fasting Days'
+title: 'The Related Discourses | 19. Indra | 15 (1117). The Fasting Days'
 type: kramdown
 base: ../../../
 previous: index.html
@@ -9,12 +9,12 @@ next: ../25/index.html
 
 # [The Related Discourses](../index.html)
 ## [19. Indra](index.html)
-### 15. The Fasting Days
+### 15 (1117). The Fasting Days
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “On the eighth day of the month, the four god kings order a great minister to assess the world: ‘Are there people who support their parents, ascetics, priests, and relatives? Do they honor them, make merits, see the evils of the present world, and fear consequences in the afterlife? Do they practice generosity to make merit and observe the fasting rules? On the eight, fourteenth, and fifteenth days of the month and miracle months, do they accept the precepts at the poṣadha?’
+2\. It was then that the Bhagavān addressed the monks, “On the eighth day of the month, the four god kings order a great minister to assess the world: ‘Are there people who support their parents, ascetics, priests, and relatives? Do they honor them, make merits, see the evils of the present world, and fear their consequences in the afterlife? Do they practice generosity to make merit and observe the fasting rules? On the eight, fourteenth, and fifteenth days of the month and miracle months, do they accept the precepts at the poṣadha?’
 {:#p2}
 
 3\. “On the fourteenth day, they send down a prince who surveys the world: ‘Are there people who support their parents … accept the precepts at the poṣadha?’
@@ -23,25 +23,25 @@ next: ../25/index.html
 4\. “On the fifteenth day, the four god kings come down to the world personally and survey the sentient beings: ‘Are there people who support their parents … accept the precepts at the poṣadha?’ Monks, suppose at that point the world doesn’t have many people who support their parents … accept the precepts at the poṣadha.
 {:#p4}
 
-5\. “The four god kings then visit the Dharma assembly of the Thirty-Three Gods in their meeting hall. They say to Śakra the Lord of Gods, ‘God king, you should know that there aren’t many people present in the world who support their parents … accept the precepts at the poṣadha.’
+5\. “The four god kings then visit the Dharma assembly of the Trāyastriṃśa gods in their meeting hall. They say to Śakra the Lord of Gods, ‘God king, you should know that there aren’t many people present in the world who support their parents … accept the precepts at the poṣadha.’
 {:#p5}
 
-6\. “The assembly of Thirty-Three Gods isn’t pleased when they hear this, and they in turn tell each other, ‘The people present in the world aren’t virtuous, good, beautiful, and fine. None truly practice, and they don’t support their parents … accept the precepts at the poṣadha. As a result of their misdeeds, the host of gods will diminish and the host of asuras will slowly grow.’
+6\. “The assembly of Trāyastriṃśa gods isn’t pleased when they hear this, and they in turn tell each other, ‘The people present in the world aren’t virtuous, good, beautiful, and fine. None truly practice, and they don’t support their parents … accept the precepts at the poṣadha. As a result of their misdeeds, the host of gods will diminish and the host of asuras will slowly grow.’
 {:#p6}
 
-7\. [296b] “Monks, suppose at that point there were many people who support their parents … accept the precepts at the poṣadha. The four god kings would visit the assembly of the Thirty-Three Gods in their meeting hall and tell Śakra the Lord of Gods, ‘God king, you should know that there are many people present in the world who support their parents … accept the precepts at the poṣadha.’
+7\. “Monks, suppose at that point there were many people who support their parents … accept the precepts at the poṣadha. The four god kings would visit the assembly of the Trāyastriṃśa gods in their meeting hall and tell Śakra the Lord of Gods, ‘God king, you should know that there are many people present in the world who support their parents … accept the precepts at the poṣadha.’
 {:#p7}
 
-8\. “The hearts of the thirty-three gods then rejoice, and they in turn tell each other, ‘There’s many people present in the world who are noble and truly follow the Dharma. They support their parents … accept the precepts at the poṣadha. As a result of their merits, the host of asuras will diminish and the host of gods will grow.’
+8\. “The hearts of the Trāyastriṃśa gods then rejoice, and they in turn tell each other, ‘There’s many people present in the world who are noble and truly follow the Dharma. They support their parents … accept the precepts at the poṣadha. As a result of their merits, the host of asuras will diminish and the host of gods will grow.’
 {:#p8}
 
-9\. “After witnessing the host of gods rejoicing, Śakra the Lord of Gods then speaks in verse:
+9\. “After witnessing the host of gods rejoice, Śakra the Lord of Gods then speaks in verse:
 {:#p9}
 
 * {:.verse}“‘Suppose on the eighth, fourteenth,\\
 and fifteenth days of the month\\
 And during the miracle months\\
-People observe the eight-rule fast.\\
+People observe the eight-ruled fast.\\
 Just like my cultivation,\\
 Their cultivation is likewise!’
 
@@ -51,36 +51,38 @@ Their cultivation is likewise!’
 * {:.verse}“‘Suppose on the eighth, fourteenth,\\
 and fifteenth days of the month\\
 And during the miracle months\\
-People observe the eight-rule fast.\\
+People observe the eight-ruled fast.\\
 Just like my cultivation,\\
 Their cultivation is likewise!’
 
-“This is not well spoken. Why is that? That Śakra the Lord of Gods himself has disturbances of craving, dislike, and delusion, and he isn’t freed from birth, old age, illness, death, grief, sorrow, pain, and trouble.
+“This was not well spoken. Why is that? That Śakra the Lord of Gods himself has disturbances of craving, dislike, and delusion, and he isn’t freed from birth, old age, illness, death, grief, sorrow, pain, and trouble.
 
-11\. “Monks, suppose an arhat who has ended the contaminants, accomplished the task, has discarded the heavy burdens, cut the bonds of existence, and who’s mind is well liberated speaks this verse:
+11\. “Monks, suppose an arhat who has ended the contaminants, accomplished the task, discarded heavy burdens, cut the bonds of existence, and who’s mind is well liberated speaks this verse:
 {:#p11}
 
 * {:.verse}“‘Suppose on the eighth, fourteenth,\\
 and fifteenth days of the month\\
 And during the miracle months\\
-People observe the eight-rule fast.\\
+People observe the eight-ruled fast.\\
 Just like my cultivation,\\
 Their cultivation is likewise!’
 
-“That statement is well spoken. Why is that? That arhat monk is free of craving, dislike, and delusion, and he has been freed from birth, old age, illness, death, grief, sorrow, pain, and trouble. So, this verse is well spoken as a result.”
+“That statement is well spoken. Why is that? That arhat monk is free of craving, dislike, and delusion, and he has been freed from birth, old age, illness, death, grief, sorrow, pain, and trouble. This verse is well spoken as a result.”
 
-12\. After the Buddha spoke this sūtra, the monks who heard what the Buddha said rejoiced and approved.
+12\. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha said rejoiced and approved.
 {:#p12}
+
+---
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [AN 3.37](https://suttacentral.net/an3.37){:target="_blank"}-[38](https://suttacentral.net/an3.38){:target="_blank"}, [SA2 46](../../samyukta2/SA2_46.html){:target="_blank"}, and [EA 24.6](../../ekottarika/24/EA24_6.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is parallel with [AN 3.37](https://suttacentral.net/an3.37){:target="_blank"}-[38](https://suttacentral.net/an3.38){:target="_blank"}, [SA2 46](../../samyukta2/SA2_46.html){:target="_blank"}, and [EA 24.6](../../ekottarika/24/EA24_6.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 June 2022
+Last Revised: 2 October 2022
 {: .revised}
 
 ---
