--- a/01_agama/samyukta/25/SA25_57.md
+++ b/01_agama/samyukta/25/SA25_57.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 25. Gods | 57. Crossing the Flood'
+title: 'The Related Discourses | 25. Gods | 57 (1267). Crossing the Flood'
 type: kramdown
 base: ../../../
 previous: index.html
@@ -9,7 +9,7 @@ next: ../34/index.html
 
 # [The Related Discourses](../index.html)
 ## [25. Gods](index.html)
-### 57. Crossing the Flood
+### 57 (1267). Crossing the Flood
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
@@ -44,10 +44,12 @@ He has forever transcended love of the world.”
 8\. When that god heard what the Buddha taught, he rejoiced and was delighted. He bowed to the Buddha’s feet and disappeared.
 {:#p8}
 
+---
+
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 1.1](https://suttacentral.net/sn1.1){:target="_blank"}, [SĀ2 180](../../samyukta2/SA2_180.html){:target="_blank"}, and T1579.378a7-11. [\[back\]](#ref1)
-2. {:#n2} *again and again*. The Chinese literally reads “thus and thus held on" and “thus and thus moved forward". Parallel expressions are found in a quotation of this sutra in the Yogâcārabhūmi (T1579.378a7-11), which in the Sanskrit version uses the expressions “yathā yathāhaṃ” and “tathā tathā.” I’ve translated both as *subsequent attempts*, rendering the expressions as “again and again,” but they could also mean *in different ways*, which I’d render as “in this way and that.” [\[back\]](#ref2)
+2. {:#n2} <em>again and again</em>. The Chinese literally reads “thus and thus held on" and “thus and thus moved forward". Parallel expressions are found in a quotation of this sūtra in the Yogâcārabhūmi (T1579.378a7-11), which in the Sanskrit version uses the expressions “yathā yathāhaṃ” and “tathā tathā.” I’ve translated both as <em>subsequent attempts</em>, rendering the expressions as “again and again,” but they could also mean <em>in different ways</em>, which I’d render as “in this way or that.” [\[back\]](#ref2)
 
 ---
 
