--- a/01_agama/samyukta/01/SA1_146.md
+++ b/01_agama/samyukta/01/SA1_146.md
@@ -14,7 +14,7 @@ next: SA1_147.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the other five monks, “Form doesn’t have self. If form had self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be these desires about form: ‘Let it be so,’ or ‘Let it not be so.’ It’s because form is without self that there’s illness and pain that arise from form, and it’s possible to desire of form: ‘Let it be so,’ or ‘Let it not be so.’ *Feeling, conception, volition, and consciousness are likewise.*
+2\. It was then that the Bhagavān addressed the other five monks, “Form doesn’t have self. If form had self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be these desires about form: ‘Let it be so,’ or ‘Let it not be so.’ It’s because form is without self that there’s illness and pain that arise from form, and it’s possible to desire of form: ‘Let it be so,’ or ‘Let it not be so.’ <em>Feeling, conception, volition, and consciousness are likewise.</em>
 {:#p2}
 
 3\. “Monks, what do you think? Is form permanent, or is it impermanent?”
@@ -32,7 +32,7 @@ The monks said to the Buddha, “It’s painful, Bhagavān.”
 
 The monks said to the Buddha, “No, Bhagavān.”
 
-6\. “*Feeling, conception, volition, and consciousness are likewise.* Therefore, monks, forms that exist in the past, future, or present, whether they are internal or external, crude or fine, beautiful or ugly, or distant or near are all not self and don’t belong to self when truly observed. *Feeling, conception, volition, and consciousness are likewise.*
+6\. “<em>Feeling, conception, volition, and consciousness are likewise.</em> Therefore, monks, forms that exist in the past, future, or present, whether they are internal or external, crude or fine, beautiful or ugly, or distant or near are all not self and don’t belong to self when truly observed. <em>Feeling, conception, volition, and consciousness are likewise.</em>
 {:#p6}
 
 7\. “Monks, well-versed noble disciples see that what’s in these five acquired aggregates is not self and doesn’t belong to self. Observing in this way, they grasp nothing in all the world. Because they grasp nothing, they attach to nothing. Because they attach to nothing, they realize nirvāṇa for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
