--- a/01_agama/samyukta/01/SA1_150.md
+++ b/01_agama/samyukta/01/SA1_150.md
@@ -35,13 +35,13 @@ next: SA1_151.html
 
 1. {:#n1} This sūtra is parallel with a passage in [MN 139](https://suttacentral.net/mn139){:target="_blank"} on local dialects, [SĀ 1.149](SA1_149.html){:target="_blank"} and [SN 22.94](https://suttacentral.net/sn22.94){:target="_blank"}. [\[back\]](#ref1)
 2. {:#n2} These Indic names are all obscure transliterations in Chinese. I’ve consulted suggestions in a classical Chinese glossary (T2130 翻梵語), which reads the transliterations as Skt., but I notice that the parallel passage in MN 139 appears to be a better guide for reconstructing several of these terms. A couple are still a mystery to me.\\
-*ghaṭī.* Ch. 揵茨. This was a water jar, apparently used for timekeeping because it became the name for clocks in India.\\
-*pātra*. Ch. 鉢. Skt. pātra, P. patta. This is the Chinese translation of the Buddhist alms bowl.\\
-*pipīla*. Ch. 匕匕羅. Skt. pipīla? This is the Skt. name of an ant. The Chinese glossary (T2130.1032c16) claims the transliteration means a flying insect. Alternatively, it may have been a word derived from an equivalent of P. pivati that meant something to do with drinking (cups, bowls, etc.). In MN 139, we see the term P. pisīlava instead.\\
-*jvāla*. Ch. 遮留. Skt. Jvāla? The Chinese glossary (T2130.987a12) says that the transliteration means “light” (光). Jvāla seems closest to the transliteration; however, rucā is another possibility if the characters are transposed. Neither option seems appropriate for the name of a vessel, but I’ve no other clues as this point.\\
-*vistha*. Ch. 毘悉多, Skt. vista or vistha. The glossary (T2130.987a13) offers a more well-known transliteration (婆私吒) for vasiṣṭha and translates the term as “highest” (最勝). However, the passage in MN 139 has P. vitta, which means possessions or property in general, but P. vittha means a drinking bowl. I’ve adopted the Skt. equivalent.\\
-*vacana*. Ch. 婆闍那, Skt. vacana. The glossary (T2130.987a14) offers an alternative transliteration (婆遮那) and translates the term as “speech” (語). Here, again, I haven’t discovered another option that may have been a common name of a vessel.\\
-*śarāva*. Ch. 薩牢, MCh. “sa-lau”, Skt. śarāva. In MN 139, one of the items in the list is P. sarāva, meaning a “plate, cup, saucer” depending on the source. I’ve adopted the Skt. equivalent. [\[back\]](#ref2)
+<em>ghaṭī.</em> Ch. 揵茨. This was a water jar, apparently used for timekeeping because it became the name for clocks in India.\\
+<em>pātra</em>. Ch. 鉢. Skt. pātra, P. patta. This is the Chinese translation of the Buddhist alms bowl.\\
+<em>pipīla</em>. Ch. 匕匕羅. Skt. pipīla? This is the Skt. name of an ant. The Chinese glossary (T2130.1032c16) claims the transliteration means a flying insect. Alternatively, it may have been a word derived from an equivalent of P. pivati that meant something to do with drinking (cups, bowls, etc.). In MN 139, we see the term P. pisīlava instead.\\
+<em>jvāla</em>. Ch. 遮留. Skt. Jvāla? The Chinese glossary (T2130.987a12) says that the transliteration means “light” (光). Jvāla seems closest to the transliteration; however, rucā is another possibility if the characters are transposed. Neither option seems appropriate for the name of a vessel, but I’ve no other clues as this point.\\
+<em>vistha</em>. Ch. 毘悉多, Skt. vista or vistha. The glossary (T2130.987a13) offers a more well-known transliteration (婆私吒) for vasiṣṭha and translates the term as “highest” (最勝). However, the passage in MN 139 has P. vitta, which means possessions or property in general, but P. vittha means a drinking bowl. I’ve adopted the Skt. equivalent.\\
+<em>vacana</em>. Ch. 婆闍那, Skt. vacana. The glossary (T2130.987a14) offers an alternative transliteration (婆遮那) and translates the term as “speech” (語). Here, again, I haven’t discovered another option that may have been a common name of a vessel.\\
+<em>śarāva</em>. Ch. 薩牢, MCh. “sa-lau”, Skt. śarāva. In MN 139, one of the items in the list is P. sarāva, meaning a “plate, cup, saucer” depending on the source. I’ve adopted the Skt. equivalent. [\[back\]](#ref2)
 
 ---
 
