--- a/01_agama/samyukta/01/SA1_172.md
+++ b/01_agama/samyukta/01/SA1_172.md
@@ -68,7 +68,7 @@ He replied, “It’s painful.”
 
 He replied, “No, Venerable Śāriputra.”
 
-“*Feeling … conception … volition … consciousness are likewise.*”
+“<em>Feeling … conception … volition … consciousness are likewise.</em>”
 
 14\. Again, Śāriputra asked, “How is it, Yamaka? Is form the Tathāgata?”
 {:#p14}
@@ -115,7 +115,7 @@ The monk Yamaka said, “Venerable Śāriputra, I didn’t understand and was ig
 
 Yamaka answered, “Venerable Śāriputra, if someone came and asked me that, I would answer in this way: ‘The form of an arhat who has ended the contaminants is impermanent. Something that’s impermanent is painful, and what’s painful has become tranquil, cooled, and forever disappeared. His feeling, conception, volition, and consciousness are likewise.’ Were someone to come and ask me that, I would answer them in this way.”
 
-23\. Śāriputra said, “Good, Yamaka! Good! You should thus answer them. Why is that? The form of an arhat who has ended the contaminants is impermanent. What’s impermanent is painful. If it’s impermanent and painful, it’s something that arises and ceases. *Feeling, conception, volition, and consciousness are likewise.*”
+23\. Śāriputra said, “Good, Yamaka! Good! You should thus answer them. Why is that? The form of an arhat who has ended the contaminants is impermanent. What’s impermanent is painful. If it’s impermanent and painful, it’s something that arises and ceases. <em>Feeling, conception, volition, and consciousness are likewise.</em>”
 {:#p23}
 
 24\. When Venerable Śāriputra explained the teaching, the monk Yamaka parted with dust and defilement, and his Dharma eye was purified.
@@ -153,7 +153,7 @@ He replied, “So it is, Venerable Śāriputra.”
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.85](https://suttacentral.net/sn22.85){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} *appropriate statement*. Ch. 時說. Lit. “timely statement.” It’s interesting to note that the Pali parallel uses the expression “kallaṁ … veyyākaraṇaṁ,” where P. *kalla* means “fitting;” but if the Indic term were S. *kāla*, the Chinese translator could have understood it as “timely.” [\[back\]](#ref2)
+2. {:#n2} <em>appropriate statement</em>. Ch. 時說. Lit. “timely statement.” It’s interesting to note that the Pali parallel uses the expression “kallaṁ … veyyākaraṇaṁ,” where P. <em>kalla</em> means “fitting;” but if the Indic term were S. <em>kāla</em>, the Chinese translator could have understood it as “timely.” [\[back\]](#ref2)
 
 ---
 
