--- a/01_agama/samyukta/02/SA2_126.md
+++ b/01_agama/samyukta/02/SA2_126.md
@@ -17,7 +17,7 @@ next: SA2_127.html
 2\. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s what’s called ‘the world.’ What is it that’s called the ‘world’?”
 {:#p2}
 
-3\. The Buddha told Samṛddhi, “What’s fragile and decaying is called ‘the world.’ What’s called fragile and decaying? Samṛddhi, the eye is something fragile and decaying. Whether it’s form, visual consciousness, visual contact, feelings that dependently arise from visual contact, or inner experiences that are painful, pleasant, or neither painful nor pleasant, they are all fragile and decaying. *The ear, nose, tongue, body, and mind are likewise.* These things that are said to be fragile and decaying are called ‘the world.’”
+3\. The Buddha told Samṛddhi, “What’s fragile and decaying is called ‘the world.’ What’s called fragile and decaying? Samṛddhi, the eye is something fragile and decaying. Whether it’s form, visual consciousness, visual contact, feelings that dependently arise from visual contact, or inner experiences that are painful, pleasant, or neither painful nor pleasant, they are all fragile and decaying. <em>The ear, nose, tongue, body, and mind are likewise.</em> These things that are said to be fragile and decaying are called ‘the world.’”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monk Samṛddhi who heard what the Buddha taught rejoiced and approved.
