--- a/01_agama/samyukta/13/SA13_21.md
+++ b/01_agama/samyukta/13/SA13_21.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. The Noble Path | 21. Arising of the Noble Path (2)'
+title: 'The Related Discourses | 13. The Noble Path | 21 (766). Arising of the Noble Path (2)'
 type: kramdown
 base: ../../../
 previous: SA13_20.html
@@ -9,25 +9,28 @@ next: SA13_22.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 21. Arising of the Noble Path (2)
+### 21 (766). Arising of the Noble Path (2)
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha stayed in the kingdom of Śrāvastī at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, Suppose a monk’s right view is pure, cleansed, without fault, and free of afflictions. “When it has yet to happen, it doesn’t happen except by the discipline of the Sugata ... *up to right concentration are likewise described*. Suppose right view is pure, cleansed, without fault, and free of afflictions. When it has yet to happen, it can happen ... *up to right concentration are likewise described*.”
+2\. It was then that the Bhagavān addressed the monks, “Suppose a monk’s right view is pure, cleansed, without fault, and free of afflictions. When this had yet to happen, it didn’t happen except by the discipline of the Sugata … <em>likewise up to right samādhi</em>. Suppose his right view is pure, cleansed, without fault, and free of afflictions. When this had yet to happen, it could happen … <em>likewise up to right samādhi</em>.”
 {:#p2}
 
-3\. After the Buddha had taught this discourse, the monks who heard what the Buddha had taught rejoiced and approved.
+3\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p3}
 
+---
+
 ### Notes
-1. {:#n1}This sutra is reconstituted from a description after SA 23.20 at 200b22, replacing “Buddha” with “Sugata.” It’s parallel to [*SN* 45.17](https://suttacentral.net/sn45.17){:target="_blank"}. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra is reconstituted according to a variant note that follows [SĀ 23.20](SA13_20.html){:target="_blank"}, which replaces “Buddha” with “Sugata.” It’s parallel to [SN 45.15](https://suttacentral.net/sn45.15){:target="_blank"} and [17](https://suttacentral.net/sn45.17){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {:.translator}
-Last Revised: 5 November 2019
+Last Revised: 1 October 2022
 {:.revised}
 
 ---
