--- a/01_agama/samyukta/13/SA13_25.md
+++ b/01_agama/samyukta/13/SA13_25.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 13. Factors of the Noble Path | 25. Wrong and Right'
+title: 'The Related Discourses | 13. Factors of the Noble Path | 25 (770). Wrong and Right'
 type: kramdown
 base: ../../../
 previous: SA13_24.html
@@ -9,28 +9,31 @@ next: SA13_26.html
 
 # [The Related Discourses](../index.html)
 ## [13. Factors of the Noble Path](index.html)
-### 25. Wrong and Right
+### 25 (770). Wrong and Right
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You must part with wrong views; you must stop wrong views. If stopping wrong views wasn’t possible, then I would never say that you must part with and stop wrong views. It’s because wrong views can be stopped that I say monks should part with wrong views. If they don’t part with wrong views, then wrong views will make them undertake what’s aimless, unbeneficial, and painful. I therefore say you must part with wrong views. *Thus, wrong intention, wrong speech, wrong action, wrong livelihood, wrong effort, wrong mindfulness, and wrong concentration are likewise explained.*
+2\. It was then that the Bhagavān addressed the monks, “You must part with wrong view; you must stop wrong view. If stopping wrong view weren’t possible, then I would never say that you must part with and stop wrong view. It’s because wrong view can be stopped that I say monks should part with wrong view. If they don’t part with wrong view, then wrong view will make them undertake what’s aimless, unbeneficial, and painful. I therefore say you must part with wrong view. <em>Wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong </em>samādhi<em> are likewise explained.</em>
 {: #p2}
 
-3\. “Monks, after you part with wrong views, you must cultivate right views. If cultivating right views wasn’t possible, I would never say that you must cultivate right views. It’s because right views can be cultivated that I say monks must cultivate right views. If they don’t cultivate right views, they will undertake what’s aimless, unbeneficial, and painful. Because not cultivating right views undertakes what’s aimless, unbeneficial, and painful, I therefore say you must cultivate right views. Because they are purposeful and beneficial, you’ll always attain well-being. Therefore, monks, you must cultivate right views. *Thus, right intention, right speech, right action, right livelihood, right effort, right mindfulness, and right concentration are likewise explained.*”
+3\. “Monks, after you part with wrong view, you must cultivate right view. If cultivating right view weren’t possible, I would never say that you must cultivate right view. It’s because right view can be cultivated that I say monks must cultivate right view. If they don’t cultivate right view, they will undertake what’s aimless, unbeneficial, and painful. Because not cultivating right view undertakes what’s aimless, unbeneficial, and painful, I therefore say you must cultivate right view. Because it’s purposeful and beneficial, it’ll always attain well-being. Therefore, monks, you must cultivate right view. <em>Right intention, right speech, right action, right livelihood, right method, right mindfulness, and right </em>samādhi<em> are likewise explained.</em>”
 {: #p3}
 
-4\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and approved.
+4\. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.
 {: #p4}
 
+---
+
 ### Notes
-1. {:#n1} Parallels include [SN 45.8](https://suttacentral.net/sn45.8){: target="_blank"}, [SN 45.21](https://suttacentral.net/sn45.21){: target="_blank"}, [SA 13.74](SA13_74.html), and T 112. [\[back\]](#ref1)
+
+1. {:#n1} Parallels include [SN 45.8](https://suttacentral.net/sn45.8){: target="_blank"}, [SN 45.21](https://suttacentral.net/sn45.21){: target="_blank"}, [SĀ 13.74](SA13_74.html), and T112. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 1 October 2022
 {: .revised}
 
 ---
