--- a/01_agama/samyukta/14/SA14_17.md
+++ b/01_agama/samyukta/14/SA14_17.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 14. Mindfulness of Breathing | 17. Attaining Four, Seven, and Two Things'
+title: 'The Related Discourses | 14. Mindfulness of Breathing | 17 (810). Attaining Four, Seven, and Two Things'
 type: kramdown
 base: ../../../
 previous: SA14_3.html
@@ -9,15 +9,15 @@ next: ../19/index.html
 
 # [The Related Discourses](../index.html)
 ## [14. Mindfulness of Breathing](index.html)
-### 17. Attaining Four, Seven, and Two Things
+### 17 (810). Attaining Four, Seven, and Two Things
 
-1\. Thus I have heard: One time, the Buddha was staying in Vṛji on the bank of the [Vaggumudā] River in a cedar forest.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in Vṛji on the bank of the [Vaggumudā] River in a cedar forest.
 {: #p1}
 
 2\. It was then that the Venerable Ānanda was alone in a quiet place, reflecting and meditating. He had this thought, “Could it be that there’s one thing that when cultivated and cultivated often will cause the fulfillment of four things, that will fulfill seven things after it fulfills those four things, and that will fulfill two things after it fulfills those seven things?”
 {: #p2}
 
-3\. Venerable Ānanda then roused from his meditation and went to the Buddha. He bowed his head at his feet, withdrew to sit at one side, and said to the Buddha, “Bhagavān, I was alone in a quiet place, reflecting and meditating. I had this thought, ‘Could it be that there’s one thing that when cultivated and cultivated often will cause the fulfillment of four things … and that will fulfill two things?’ Now, I’d like to ask the Bhagavān, is there one thing when cultivated often can cause … the fulfillment of two things?”
+3\. Venerable Ānanda then roused from his meditation and went to the Buddha. He bowed his head at his feet, withdrew to sit at one side, and said to the Buddha, “Bhagavān, I was alone in a quiet place, reflecting and meditating. I had this thought, ‘Could it be that there’s one thing that when cultivated and cultivated often will cause the fulfillment of four things … and that will fulfill two things?’ Now, I’d like to ask the Bhagavān, is there one thing that when cultivated often can cause … the fulfillment of two things?”
 {: #p3}
 
 4\. The Buddha told Ānanda, “There is one thing that when cultivated often … can cause the fulfillment of two things. What’s that one thing? It’s mindfulness of breathing. When it’s cultivated often, it can cause the fulfillment of the four abodes of mindfulness. After fulfilling the four abodes of mindfulness, the seven factors of awakening are fulfilled. After fulfilling the seven factors of awakening, insight and liberation are fulfilled.
@@ -32,13 +32,13 @@ next: ../19/index.html
 7\. “If there are times the noble disciple perceives joy … perceives happiness … perceives his mind’s activity … perceives his mind’s activity calming, then when he’s mindful of inhaling, he mindfully trains while his mental activity calms as he inhales. When he’s mindful of his mind’s activity calming as he exhales, he mindfully trains while his mind’s activity calms as he exhales. At that point, the noble disciple is mindfully abiding in contemplation of feeling as feeling. Whatever feeling it is, he also reflects according to that feeling.
 {: #p7}
 
-8\. “If there are times the noble disciple perceives his mind and perceives his mind’s gladness … mind’s concentration … mind’s liberation, then when he’s mindful of inhaling, he mindfully trains as he inhales. When he’s mindful of his mind’s liberation as he exhales, he mindfully trains in the mind’s liberation as he exhales. At that point, the noble disciple is mindfully abiding in contemplation of mind as mind. Whatever mind it is, he also reflects on it according to that mind.
+8\. “If there are times the noble disciple perceives his mind and perceives his mind’s gladness … mind’s <em>samādhi</em> … mind’s liberation, then when he’s mindful of inhaling, he mindfully trains as he inhales. When he’s mindful of his mind’s liberation as he exhales, he mindfully trains in the mind’s liberation as he exhales. At that point, the noble disciple is mindfully abiding in contemplation of mind as mind. Whatever mind it is, he also reflects on it according to that mind.
 {: #p8}
 
 9\. “If there are times when the noble disciple observes impermanence … ending … the lack of desire … cessation, then he trains in the observation of impermanence … ending … the lack of desire … cessation. At that point, the noble disciple is mindfully abiding in contemplation of principle as principle. Whatever principle it is, he also reflects on it according to that principle. This is called cultivating mindfulness of breathing and fulfilling the four abodes of mindfulness.”
 {: #p9}
 
-10\. Ānanda said to the Buddha, “Thus does mindfulness of breathing cause the fulfillment of the four abodes of mindfulness. How does cultivating the four abodes of mindfulness cause the fulfillment of the seven factors of awakening?”
+10\. Ānanda said to the Buddha, “Mindfulness of breathing causes the fulfillment of the four abodes of mindfulness in this way. How does cultivating the four abodes of mindfulness cause the fulfillment of the seven factors of awakening?”
 {: #p10}
 
 11\. The Buddha told Ānanda, “Suppose a monk mindfully abides in contemplation of body as body. After mindfully abiding, he fixes his attention and doesn’t lose it. At that point, this is the method of cultivating the awakening factor of mindfulness. After cultivating the awakening factor of mindfulness, he fulfills the awakening factor of mindfulness.
@@ -50,35 +50,41 @@ next: ../19/index.html
 13\. “After discriminating, discerning, and deliberating on qualities, he attains the method of diligence. At that point, this is the method of cultivating the awakening factor of effort. After cultivating the awakening factor of effort, he fulfills the awakening factor of effort.
 {: #p13}
 
-14\. “After the method of effort, then his mind is joyous. At that point, this is the method of cultivating the awakening factor of joy. After cultivating the awakening factor of joy, he fulfills the awakening factor of joy.
+14\. “After the method of effort, then his mind becomes joyous. At that point, this is the method of cultivating the awakening factor of joy. After cultivating the awakening factor of joy, he fulfills the awakening factor of joy.
 {: #p14}
 
 15\. “After rejoicing, he becomes calm in body and mind. At that point, this is the method of cultivating the awakening factor of peace. After cultivating the awakening factor of peace, he fulfills the awakening factor of peace.
 {: #p15}
 
-16\. “After his body and mind are comfortable, he attains concentration. At that point, this is the method of cultivating the awakening factor of concentration. After cultivating the awakening factor of concentration, he fulfills the awakening factor of concentration.
+16\. “After his body and mind are comfortable, he attains <em>samādhi</em>. At that point, this is the method of cultivating the awakening factor of <em>samādhi</em>. After cultivating the awakening factor of <em>samādhi</em>, he fulfills the awakening factor of <em>samādhi</em>.
 {: #p16}
 
-17\. “After fulfilling the awakening factor of concentration, his craving and sadness cease, and he attains the levelness of equanimity. At that point, this is the method of cultivating the awakening factor of equanimity. After cultivating the awakening factor of equanimity, he fulfills the awakening factor of equanimity. The mindfulness of feeling … mind … and principle as principle are likewise explained. This is called cultivating the four abodes of mindfulness to fulfill the seven factors of awakening.”
+17\. “After fulfilling the awakening factor of <em>samādhi</em>, his craving and sadness cease, and he attains the levelness of equanimity. At that point, this is the method of cultivating the awakening factor of equanimity. After cultivating the awakening factor of equanimity, he fulfills the awakening factor of equanimity. <em>The mindfulness of feeling … mind … and principle as principle are likewise explained.</em> This is called cultivating the four abodes of mindfulness to fulfill the seven factors of awakening.”
 {: #p17}
 
 18\. Ānanda told the Buddha, “This is called cultivating the four abodes of mindfulness to fulfill the seven factors of awakening. How does cultivating the seven factors of awakening fulfill insight and liberation?”
 {: #p18}
 
-19\. The Buddha told Ānanda, “Suppose a monk cultivates the awakening factor of mindfulness depending on seclusion, the lack of desire, and cessation and heading towards equanimity. After cultivating the awakening factor of mindfulness, he fulfills insight and liberation. … cultivates the awakening factor of equanimity depending on seclusion, the lack of desire, and cessation and heading towards equanimity. After thus cultivating the awakening factor of equanimity, he fulfills insight and liberation.
+19\. The Buddha told Ānanda, “Suppose a monk cultivates the awakening factor of mindfulness depending on seclusion, the lack of desire, and cessation and heading towards equanimity. After cultivating the awakening factor of mindfulness, he fulfills insight and liberation … He cultivates the awakening factor of equanimity depending on seclusion, the lack of desire, and cessation and heading towards equanimity. After thus cultivating the awakening factor of equanimity, he fulfills insight and liberation.
 {: #p19}
 
-20\. “Ānanda, these are called the mutual categories of things and the mutual enrichment of things. Thus, these 13 things are developed by one thing, and one thing is their entryway. Advancing sequentially, they are cultivated and fulfilled.”
+20\. “Ānanda, these are called the mutual categories of things and the mutual enrichment of things. Thus, these thirteen things are developed by one thing, and one thing is their entryway. Advancing sequentially, they are cultivated and fulfilled.”
 {: #p20}
 
-21\. After the Buddha taught this sūtra, Venerable Ānanda heard what he taught, rejoiced, and approved.
+21\. After the Buddha spoke this <em>sūtra</em>, Venerable Ānanda who heard what he taught rejoiced and approved.
 {: #p21}
+
+---
+
+### Notes
+
+1. {:#n1} This <em>sūtra</em> is parallel with [SN 54.13](https://suttacentral.net/sn54.13){: target="_blank"}-[14](https://suttacentral.net/sn54.14){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 July 2020
+Last Revised: 2 October 2022
 {: .revised}
 
 ---
